[Wi-Fi] Turning off wifi shows confusing message, It should prompt wifi is turned off.
When you disable wifi, instead of a message that wifi is turned off, settings panel says "No Wifi Adapter found"
Steps to reproduce:
- Open GNOME Settings
- Go to Wi-Fi panel and turn off wifi
- following screen is presented
The toggle in top right corner works and can turn wifi back on.
gnome-shell: GNOME Shell 41.1
gnome-control-center: gnome-control-center 41.1
Distro: Manjaro rolling. Same behaviour observed on Arch and fedora.
Tested on hardware: Dell Inc. Inspiron 7405 2n1 and HP Stream 14 CB102CA
Edited by Rohan Mishra