wifi: Don't show "No Wi-Fi Adapter Found" when Wi-Fi is off

Use "nm_client_wireless_hardware_get_enabled" to check if
Wi-Fi is enabled or not at the hardware level. Then, show
a different AdwStatusPage when the Wi-Fi adapter is absent
and when Wi-Fi is off.

Reference:
https://gitlab.gnome.org/Teams/Design/settings-mockups/-/commit/cfb7cae4a9834f2722556c26fc80d0f64b703217

Closes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1514